frontend/sass/commento-footer.scss
@import "colors-main.scss";

.commento-footer {
  margin: 36px 0 12px 0;
  padding-right: 12px;

  .commento-logo-container {
    float: right;

    .commento-logo {
      padding: 5px;
      font-size: 13px;
      line-height: 24px;
      color: $gray-7;
      font-weight: 400;
    }
  }
}

